Доработана верстка первой страницы

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Отдых в Седоне, штат Аризона.</title>
+  <title>Отдых в Седоне, штат Аризона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -34,7 +34,7 @@
     </header>
     <main class="main">
 
-      <h1 class="visually-hidden">Все о Седоне.</h1>
+      <h1 class="visually-hidden">Все о Седоне</h1>
 
       <div class="welcome-teaser welcome-teaser-image">
         <img class="welcome-teaser-text" src="img/welcome.svg" width="459" height="353" alt="Добро пожаловать в прекрасный город Седона">
@@ -43,42 +43,47 @@
         <h2 class="advantages-section-text-one">Седонa — небольшой городок в Аризоне, <br /> заслуживающий большего!</h2>
         <p class="advantages-section-text-two">Рассмотрим 5 причин, по которым Седона круче, чем гранд Каньон!</p>
       </section>
-      <section class="visually-hidden features">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="features-list">
-          <li class="feature-item">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      <section class="features-and-advantages">
+        <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
+        <ul class="advantages-list">
+          <li class="advantage-item-one">
+            <h3 class="advantages-title">Настоящий <br /> городок</h3>
+            <p class="features-number">- №1 -</p>
+            <p>Седона - не аттракцион для туристов, <br /> там течет своя жизнь</p>
           </li>
-          <li class="feature-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <li class="advantage-item-two">
+            <h3 class="advantages-title">Там есть <br /> мост дьявола</h3>
+            <p class="features-number">- №2 -</p>
+            <p>Да по нему можно пройти! Если конечно <br /> вы осмелитесь</p>
           </li>
-          <li class="feature-item">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и местного производства.</p>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Небольшая <br /> площадь</h3>
+            <p class="features-number">- №3 -</p>
+            <p>Все достопримечательности <br /> находятся очень близко</p>
+          </li>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Красивая <br /> дорога</h3>
+            <p class="features-number">- №4 -</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем <br /> не скучно!</p>
+          </li>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Мало <br /> туристов</h3>
+            <p class="features-number">- №5 -</p>
+            <p>Большинство едет в Гранд Каньон <br /> и толпится там</p>
           </li>
         </ul>
-        <ul class="advantages-list">
-          <li class="advantage-item">
-            <h3>Настоящий городок</h3>
-            <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+        <ul class="features-list">
+          <li class="feature-item feature-house">
+            <h3 class="features-title">Жильё</h3>
+            <p>Рекомендуем пожить в настоящем <br /> мотеле, всё как в кино!</p>
           </li>
-          <li class="advantage-item">
-            <h3>Там есть мост дьявола</h3>
-            <p>Да по нему можно пройти! Если конечно вы осмелитесь</p>
+          <li class="feature-item feature-food">
+            <h3 class="features-title">Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, <br /> вы не разочаруетесь!</p>
           </li>
-          <li class="advantage-item">
-            <h3>Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantage-item">
-            <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantage-item">
-            <h3>Мало туристов</h3>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="feature-item feature-souvenires">
+            <h3 class="features-title">Сувениры</h3>
+            <p>Не только китайского, но и местного <br /> производства!</p>
           </li>
         </ul>
       </section>
@@ -99,9 +104,9 @@
               <label class="search-form-label" for="checkin-date">Дата заезда:</label>
               <div class="input-wrap">
                 <input type="text" class="search-form-control" name="checkin-date" id="checkin-date" value="24 апреля 2019">
-                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                  x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22"
-                  xml:space="preserve">
+                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
+                  enable-background="new 0 0 21 22" xml:space="preserve">
                   <g id="calendar_1_">
                     <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
 		c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
@@ -127,9 +132,9 @@
               <label class="search-form-label" for="checkout-date">Дата выезда: </label>
               <div class="input-wrap">
                 <input type="text" class="search-form-control" name="checkout-date" id="checkout-date" value="30 апреля 2019">
-                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                  x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22"
-                  xml:space="preserve">
+                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
+                  enable-background="new 0 0 21 22" xml:space="preserve">
                   <g id="calendar_1_">
                     <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
 		c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
