Завершающий этап верстки, без выполнения дополнительных критериев

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </div>
         </form>
         <div class="search-map">
-          <img src="img/map.jpg">
+          <img src="img/map.jpg" alt="Карта города Седона">
         </div>
       </section>
     </main>
@@ -189,17 +189,17 @@
         <ul class="footer-social-button-list">
           <li class="social-button button-blue">
             <a class="button-twitter" href="#">
-              <img src="img/twitter-icon.svg" alt="Twitter">
+              <img src="img/twitter-icon.svg" alt="Ссылка на Twitter аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
             <a class="button-facebook" href="#">
-              <img src="img/facebook-icon.svg" alt="Facebook">
+              <img src="img/facebook-icon.svg" alt="Ссылка на Facebook аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
             <a class="button-youtube" href="#">
-              <img src="img/youtube-icon.svg" alt="YouTube">
+              <img src="img/youtube-icon.svg" alt="Ссылка на канал YouTube">
             </a>
           </li>
         </ul>
