--- a/sedona-hotels.html
+++ b/sedona-hotels.html
@@ -34,48 +34,90 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Отели Седоны</h1>
-      <section class="visually-hidden filters">
+      <section class="hotel-filters">
         <h2 class="visually-hidden">Фильтр отелей</h2>
         <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
-          <fieldset>
-            <legend>Инфраструктура:</legend>
+          <fieldset class="infrastructure-filter">
+            <legend class="filters-legend">Инфраструктура:</legend>
             <ul class="infrastructure-features-list">
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="pool" id="pool" checked>
-                <label for="pool">Бассейн</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox" type="checkbox" name="pool" id="pool" checked>
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="pool">Бассейн</label>
               </li>
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="parking" id="parking">
-                <label for="parking">Парковка</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox woot" type="checkbox" name="parking" id="parking">
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="parking">Парковка</label>
               </li>
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="wi-fi" id="wi-fi" checked>
-                <label for="wi-fi">Wi-Fi</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox" type="checkbox" name="wi-fi" id="wi-fi">
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="wi-fi">Wi-Fi</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset>
-            <legend>Тип жилья:</legend>
+          <fieldset class="accomodation-filter">
+            <legend class="filters-legend">Тип жилья:</legend>
             <ul class="home-type-list">
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="hotel" id="hotel" checked>
-                <label for="hotel">Гостиница</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox" type="checkbox" name="hotel" id="hotel" checked>
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="hotel">Гостиница</label>
               </li>
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="motel" id="motel" checked>
-                <label for="motel">Мотель</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox" type="checkbox" name="motel" id="motel" checked>
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="motel">Мотель</label>
               </li>
-              <li class="filter-option"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                  name="apartments" id="apartments" checked>
-                <label for="apartments">Апартаменты</label>
+              <li class="filter-option">
+                <input class="filter-input-checkbox" type="checkbox" name="apartments" id="apartments" checked>
+                <span class="filter-input-custom-checkbox"></span>
+                <label class="filter-label" for="apartments">Апартаменты</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset>
-            <legend>Стоимость в сутки:</legend>
-          </fieldset>
-          <button class="filter-button button" type="submit">Показать</button>
+          <div class="filter-submit">
+            <fieldset class="value-filter">
+              <legend class="filters-legend">Стоимость в сутки (₽):</legend>
+              <section class="catalog__filter range">
+                <h3 class="visually-hidden">Слайдер</h3>
+                <div class="output-box">
+                  <p class="range__price-count-from">ОТ <output id="output-min-price" class="range__count-min">0</output></p>
+                  <p class="range__price-count-to">ДО <output id="output-max-price" class="range__count-max">3000</output></p>
+                </div>
+                <div class="range__filter">
+                  <button class="range__btn range__btn--left" type="button">
+                    <span class="range__btn-content range__btn-content--left">левый ползунок</span>
+                  </button>
+                  <div class="range__fill-line"></div>
+                  <button class="range__btn range__btn--right" type="button">
+                    <span class="range__btn-content range__btn-content--right">правый ползунок</span>
+                  </button>
+                </div>
+              </section>
+            </fieldset>
+            <button class="filter-button button" type="submit">Показать</button>
+          </div>
         </form>
+      </section>
+      <section class="sorting-options">
+        <h2 class="visually-hidden">Сортировка найденных отелей</h2>
+        <p class="sorting-options-found-hotels">Найдено: 3</p>
+        <p class="sorting-options-legend">Сортировка:</p>
+          <ul class="sorting-options-list">
+            <li class="sorting-option option-price">
+              По цене
+            </li>
+            <li class="sorting-option option-type">
+              По типу
+            </li>
+            <li class="sorting-option option-rating">
+              По рейтингу
+            </li>
+          </ul>
+          <div class="sorting-arrow-up"></div>
+          <div class="sorting-arrow-down"></div>
       </section>
       <section class="hotels-catalog">
         <h2 class="visually-hidden">Каталог отелей Седоны</h2>
@@ -93,11 +135,7 @@
                 <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="catalog-item-rating">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
+            <div class="catalog-item-rating rating-four">
               <p class="catalog-item-rating-text">Рейтинг: 8,5</p>
             </div>
           </li>
@@ -114,10 +152,7 @@
                 <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="catalog-item-rating">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
+            <div class="catalog-item-rating rating-three">
               <p class="catalog-item-rating-text">Рейтинг: 8,9</p>
             </div>
           </li>
@@ -134,9 +169,7 @@
                 <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="catalog-item-rating">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
-              <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
+            <div class="catalog-item-rating rating-two">
               <p class="catalog-item-rating-text">Рейтинг: 9,2</p>
             </div>
           </li>
@@ -149,17 +182,17 @@
         <ul class="footer-social-button-list">
           <li class="social-button button-blue">
             <a class="button-twitter" href="#">
-              <img src="img/twitter-icon.svg" alt="Twitter">
+              <img src="img/twitter-icon.svg" alt="Ссылка на Twitter аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
             <a class="button-facebook" href="#">
-              <img src="img/facebook-icon.svg" alt="Facebook">
+              <img src="img/facebook-icon.svg" alt="Ссылка на Facebook аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
             <a class="button-youtube" href="#">
-              <img src="img/youtube-icon.svg" alt="YouTube">
+              <img src="img/youtube-icon.svg" alt="Ссылка на канал YouTube">
             </a>
           </li>
         </ul>
@@ -169,8 +202,9 @@
         <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">
           <svg class="dev-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
             <title>htmlacademy logo</title>
-            <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20"/>
-            </svg>
+            <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z"
+              transform="translate(0 -0.02)" fill="#231f20" />
+          </svg>
         </a>
       </p>
     </footer>
