Убрала копии id на которые ругался валидатор

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
                   enable-background="new 0 0 21 22" xml:space="preserve">
-                  <g id="calendar_1_">
+                  <g>
                     <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
 		c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
 		c-0.363,0-0.657,0.308-0.657,0.689v1.377H1.75C0.784,2.025,0,2.847,0,3.862v16.302C0,21.179,0.784,22,1.75,22h17.501
@@ -132,10 +132,10 @@
               <label class="search-form-label" for="checkout-date">Дата выезда: </label>
               <div class="input-wrap">
                 <input type="text" class="search-form-control" name="checkout-date" id="checkout-date" value="30 апреля 2019">
-                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
                   enable-background="new 0 0 21 22" xml:space="preserve">
-                  <g id="calendar_1_">
+                  <g>
                     <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
 		c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
 		c-0.363,0-0.657,0.308-0.657,0.689v1.377H1.75C0.784,2.025,0,2.847,0,3.862v16.302C0,21.179,0.784,22,1.75,22h17.501
