Исправление ошибок + переделала стрелочки сортировщиков на button и добавила недостающие состояния focus разным элементам

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="site-navigation-link text-interactive" href="arisona-map.html">Карта штата</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link text-interactive" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation-link text-interactive" href="sedona-hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -159,18 +159,18 @@
             <div class="search-form-row search-form-row-reduced">
               <label class="search-form-label" for="guests-amount">Взрослые: </label>
               <div class="input-wrap">
-                <button class="search-form-add-guests-button">-</button>
+                <button class="search-form-add-guests-button" type="button">-</button>
                 <input type="text" class="search-form-control input-amount" name="guests-amount" id="guests-amount"
                   value="1">
-                <button class="search-form-add-guests-button">+</button>
+                <button class="search-form-add-guests-button" type="button">+</button>
               </div>
             </div>
             <div class="search-form-row search-form-row-reduced">
               <label class="search-form-label kids-amount-text" for="kids-amount">Дети:</label>
               <div class="input-wrap">
-                <button class="search-form-add-guests-button">-</button>
+                <button class="search-form-add-guests-button" type="button">-</button>
                 <input type="text" class="search-form-control input-amount" name="kids-amount" id="kids-amount" value="0">
-                <button class="search-form-add-guests-button">+</button>
+                <button class="search-form-add-guests-button" type="button">+</button>
               </div>
             </div>
             <div class="search-form-row">
