--- a/sedona-hotels.html
+++ b/sedona-hotels.html
@@ -106,18 +106,22 @@
         <p class="sorting-options-found-hotels">Найдено: 3</p>
         <p class="sorting-options-legend">Сортировка:</p>
           <ul class="sorting-options-list">
-            <li class="sorting-option option-price">
-              По цене
+            <li class="sorting-option">
+                <a class="option-price" href="#">По цене</a>
             </li>
-            <li class="sorting-option option-type">
-              По типу
+            <li class="sorting-option">
+                <a class="option-type" href="#">По типу</a>
             </li>
-            <li class="sorting-option option-rating">
-              По рейтингу
+            <li class="sorting-option">
+                <a class="option-rating" href="#">По рейтингу</a>
             </li>
           </ul>
-          <div class="sorting-arrow-up"></div>
-          <div class="sorting-arrow-down"></div>
+          <button class="arrow__btn arrow__btn--up" type="button">
+            <span class="sorting-arrow-up"></span>
+          </button>
+          <button class="arrow__btn arrow__btn--down" type="button">
+            <span class="sorting-arrow-down"></span>
+          </button>
       </section>
       <section class="hotels-catalog">
         <h2 class="visually-hidden">Каталог отелей Седоны</h2>
