Сделана анимация формы поиска

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <button class="search-form-button button-brown" type="button">
             Поиск гостиницы в Седоне
           </button>
-          <div class="search-form-body visually-hidden">
+          <div class="search-form-body search-body-hidden">
             <div class="search-form-row">
               <label class="search-form-label" for="checkin-date">Дата заезда:</label>
               <div class="input-wrap">
