--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </form>
         <div class="search-map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ+86336%2C+USA!5e0!3m2!1sen!2sde!4v1547591937156"
-          width="1200" height="490" frameborder="0" style="border:0" allowfullscreen>
+          width="1200" height="490" style="border:0" allowfullscreen>
           </iframe>
         </div>
       </section>
