--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header>
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
+        <a class="main-header-logo">
           <img src="img/logo.svg" width="140" height="71" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
@@ -40,50 +40,48 @@
         <img class="welcome-teaser-text" src="img/welcome.svg" width="459" height="353" alt="Добро пожаловать в прекрасный город Седона">
       </div>
       <section class="advantages-section">
-        <h2 class="advantages-section-text-one">Седонa — небольшой городок в Аризоне, <br /> заслуживающий большего!</h2>
+        <h2 class="advantages-section-text-one">Седонa — небольшой городок в Аризоне,<br />заслуживающий большего!</h2>
         <p class="advantages-section-text-two">Рассмотрим 5 причин, по которым Седона круче, чем гранд Каньон!</p>
       </section>
       <section class="features-and-advantages">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-        <ul class="advantages-list">
+        <ul class="features-and-advantages-list">
           <li class="advantage-item-one">
-            <h3 class="advantages-title">Настоящий <br /> городок</h3>
-            <p class="features-number">- №1 -</p>
-            <p>Седона - не аттракцион для туристов, <br /> там течет своя жизнь</p>
+            <h3 class="advantages-title">Настоящий<br />городок</h3>
+            <p class="features-number">— №1 —</p>
+            <p class="features-text">Седона — не аттракцион для туристов,<br />там течет своя жизнь</p>
           </li>
-          <li class="advantage-item-two">
-            <h3 class="advantages-title">Там есть <br /> мост дьявола</h3>
-            <p class="features-number">- №2 -</p>
-            <p>Да по нему можно пройти! Если конечно <br /> вы осмелитесь</p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantages-title">Небольшая <br /> площадь</h3>
-            <p class="features-number">- №3 -</p>
-            <p>Все достопримечательности <br /> находятся очень близко</p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantages-title">Красивая <br /> дорога</h3>
-            <p class="features-number">- №4 -</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем <br /> не скучно!</p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantages-title">Мало <br /> туристов</h3>
-            <p class="features-number">- №5 -</p>
-            <p>Большинство едет в Гранд Каньон <br /> и толпится там</p>
-          </li>
-        </ul>
-        <ul class="features-list">
           <li class="feature-item feature-house">
             <h3 class="features-title">Жильё</h3>
-            <p>Рекомендуем пожить в настоящем <br /> мотеле, всё как в кино!</p>
+            <p class="features-text">Рекомендуем пожить в настоящем<br />мотеле, всё как в кино!</p>
           </li>
           <li class="feature-item feature-food">
             <h3 class="features-title">Еда</h3>
-            <p>Всегда заказывайте фирменный бургер, <br /> вы не разочаруетесь!</p>
+            <p class="features-text">Всегда заказывайте фирменный бургер,<br />вы не разочаруетесь!</p>
           </li>
           <li class="feature-item feature-souvenires">
             <h3 class="features-title">Сувениры</h3>
-            <p>Не только китайского, но и местного <br /> производства!</p>
+            <p class="features-text">Не только китайского, но и местного<br />производства!</p>
+          </li>
+          <li class="advantage-item-two">
+            <h3 class="advantages-title">Там есть<br />мост дьявола</h3>
+            <p class="features-number">— №2 —</p>
+            <p class="features-text">Да по нему можно пройти! Если конечно<br />вы осмелитесь</p>
+          </li>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Небольшая<br />площадь</h3>
+            <p class="features-number">— №3 —</p>
+            <p class="features-text">Все достопримечательности<br />находятся очень близко</p>
+          </li>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Красивая<br />дорога</h3>
+            <p class="features-number">— №4 —</p>
+            <p class="features-text">Ехать в Седону из Лас-Вегаса совсем<br />не скучно!</p>
+          </li>
+          <li class="advantage-item">
+            <h3 class="advantages-title">Мало<br />туристов</h3>
+            <p class="features-number">— №5 —</p>
+            <p class="features-text">Большинство едет в Гранд Каньон<br />и толпится там</p>
           </li>
         </ul>
       </section>
@@ -92,7 +90,7 @@
         <header class="search-header">
           <h2 class="search-header-title">Заинтересовались?</h2>
           <p class="search-header-text">
-            Укажите предполагаемые даты поездки, <br /> и мы покажем вам лучшие предложения гостиниц в Седоне
+            Укажите предполагаемые даты поездки,<br />и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
         </header>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
@@ -104,7 +102,7 @@
               <label class="search-form-label" for="checkin-date">Дата заезда:</label>
               <div class="input-wrap">
                 <input required type="text" class="search-form-control" name="checkin-date" id="checkin-date" value="24 апреля 2019">
-                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="search-form-control-calender" aria-label="Календарь" fill="#D2CDA5" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
                   enable-background="new 0 0 21 22" xml:space="preserve">
                   <g>
@@ -132,7 +130,7 @@
               <label class="search-form-label" for="checkout-date">Дата выезда: </label>
               <div class="input-wrap">
                 <input required type="text" class="search-form-control" name="checkout-date" id="checkout-date" value="30 апреля 2019">
-                <svg class="search-form-control-calender" fill="#D2CDA5" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="search-form-control-calender" aria-label="Календарь" fill="#D2CDA5" version="1.1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22"
                   enable-background="new 0 0 21 22" xml:space="preserve">
                   <g>
@@ -159,18 +157,18 @@
             <div class="search-form-row search-form-row-reduced">
               <label class="search-form-label" for="guests-amount">Взрослые: </label>
               <div class="input-wrap">
-                <button class="search-form-add-guests-button" type="button">-</button>
+                <button class="search-form-add-guests-button" type="button" aria-label="Минус">-</button>
                 <input required type="text" class="search-form-control input-amount" name="guests-amount" id="guests-amount"
                   value="1">
-                <button class="search-form-add-guests-button" type="button">+</button>
+                <button class="search-form-add-guests-button" type="button" aria-label="Плюс">+</button>
               </div>
             </div>
             <div class="search-form-row search-form-row-reduced">
               <label class="search-form-label kids-amount-text" for="kids-amount">Дети:</label>
               <div class="input-wrap">
-                <button class="search-form-add-guests-button" type="button">-</button>
+                <button class="search-form-add-guests-button" type="button" aria-label="Минус">-</button>
                 <input type="text" class="search-form-control input-amount" name="kids-amount" id="kids-amount" value="0">
-                <button class="search-form-add-guests-button" type="button">+</button>
+                <button class="search-form-add-guests-button" type="button" aria-label="Плюс">+</button>
               </div>
             </div>
             <div class="search-form-row">
@@ -190,25 +188,25 @@
       <div class="footer-social">
         <ul class="footer-social-button-list">
           <li class="social-button button-blue">
-            <a class="button-twitter" href="#">
-              <img src="img/twitter-icon.svg" alt="Ссылка на Twitter аккаунт">
+            <a class="social-button-icon" href="#">
+              <img src="img/twitter-icon.svg" width="17" height="15" alt="Ссылка на Twitter аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
-            <a class="button-facebook" href="#">
-              <img src="img/facebook-icon.svg" alt="Ссылка на Facebook аккаунт">
+            <a class="social-button-icon" href="#">
+              <img src="img/facebook-icon.svg" width="12" height="22" alt="Ссылка на Facebook аккаунт">
             </a>
           </li>
           <li class="social-button button-blue">
-            <a class="button-youtube" href="#">
-              <img src="img/youtube-icon.svg" alt="Ссылка на канал YouTube">
+            <a class="social-button-icon" href="#">
+              <img src="img/youtube-icon.svg" width="20" height="16" alt="Ссылка на канал YouTube">
             </a>
           </li>
         </ul>
       </div>
       <p class="footer-copyright">
-        <span>Website by</span>
-        <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">
+        <span class="copyright-text">Website by</span>
+        <a class="button copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
           <svg class="dev-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
             <title>htmlacademy logo</title>
             <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z"
