Внесла все правки. Остался только один br в .search-header-text от него невозможно избавиться ограничением ширины контейнера.

--- a/index.html
+++ b/index.html
@@ -32,56 +32,55 @@
         </ul>
       </nav>
     </header>
+
     <main class="main">
-
       <h1 class="visually-hidden">Все о Седоне</h1>
-
       <div class="welcome-teaser welcome-teaser-image">
         <img class="welcome-teaser-text" src="img/welcome.svg" width="459" height="353" alt="Добро пожаловать в прекрасный город Седона">
       </div>
       <section class="advantages-section">
-        <h2 class="advantages-section-text-one">Седонa — небольшой городок в Аризоне,<br />заслуживающий большего!</h2>
+        <h2 class="advantages-section-text-one">Седонa — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="advantages-section-text-two">Рассмотрим 5 причин, по которым Седона круче, чем гранд Каньон!</p>
       </section>
       <section class="features-and-advantages">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
         <ul class="features-and-advantages-list">
           <li class="advantage-item-one">
-            <h3 class="advantages-title">Настоящий<br />городок</h3>
+            <h3 class="advantages-title">Настоящий городок</h3>
             <p class="features-number">— №1 —</p>
-            <p class="features-text">Седона — не аттракцион для туристов,<br />там течет своя жизнь</p>
+            <p class="features-text width-adjust-one">Седона — не аттракцион для туристов, там течет своя жизнь</p>
           </li>
           <li class="feature-item feature-house">
             <h3 class="features-title">Жильё</h3>
-            <p class="features-text">Рекомендуем пожить в настоящем<br />мотеле, всё как в кино!</p>
+            <p class="features-text width-adjust-one">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="feature-item feature-food">
             <h3 class="features-title">Еда</h3>
-            <p class="features-text">Всегда заказывайте фирменный бургер,<br />вы не разочаруетесь!</p>
+            <p class="features-text width-adjust-one">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="feature-item feature-souvenires">
             <h3 class="features-title">Сувениры</h3>
-            <p class="features-text">Не только китайского, но и местного<br />производства!</p>
+            <p class="features-text width-adjust-one">Не только китайского, но и местного производства!</p>
           </li>
           <li class="advantage-item-two">
-            <h3 class="advantages-title">Там есть<br />мост дьявола</h3>
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="features-number">— №2 —</p>
-            <p class="features-text">Да по нему можно пройти! Если конечно<br />вы осмелитесь</p>
+            <p class="features-text width-adjust-one">Да по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li class="advantage-item">
-            <h3 class="advantages-title">Небольшая<br />площадь</h3>
+            <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="features-number">— №3 —</p>
-            <p class="features-text">Все достопримечательности<br />находятся очень близко</p>
+            <p class="features-text width-adjust-two">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantage-item">
-            <h3 class="advantages-title">Красивая<br />дорога</h3>
+            <h3 class="advantages-title">Красивая дорога</h3>
             <p class="features-number">— №4 —</p>
-            <p class="features-text">Ехать в Седону из Лас-Вегаса совсем<br />не скучно!</p>
+            <p class="features-text width-adjust-two">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantage-item">
-            <h3 class="advantages-title">Мало<br />туристов</h3>
+            <h3 class="advantages-title">Мало туристов</h3>
             <p class="features-number">— №5 —</p>
-            <p class="features-text">Большинство едет в Гранд Каньон<br />и толпится там</p>
+            <p class="features-text width-adjust-three">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
       </section>
@@ -90,14 +89,15 @@
         <header class="search-header">
           <h2 class="search-header-title">Заинтересовались?</h2>
           <p class="search-header-text">
-            Укажите предполагаемые даты поездки,<br />и мы покажем вам лучшие предложения гостиниц в Седоне
+            Укажите предполагаемые даты поездки,
+            <br />и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
         </header>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
           <button class="search-form-button button-brown" type="button">
             Поиск гостиницы в Седоне
           </button>
-          <div class="search-form-body search-body-hidden">
+          <div class="search-form-body">
             <div class="search-form-row">
               <label class="search-form-label" for="checkin-date">Дата заезда:</label>
               <div class="input-wrap">
@@ -184,7 +184,9 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer-hashtag">#VISITSEDONA</p>
+      <div class="footer-hashtag">
+        <p class="hashtag-text">#VISITSEDONA</p>
+      </div>
       <div class="footer-social">
         <ul class="footer-social-button-list">
           <li class="social-button button-blue">
@@ -204,7 +206,7 @@
           </li>
         </ul>
       </div>
-      <p class="footer-copyright">
+      <div class="footer-copyright">
         <span class="copyright-text">Website by</span>
         <a class="button copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
           <svg class="dev-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
@@ -213,7 +215,7 @@
               transform="translate(0 -0.02)" fill="#231f20" />
           </svg>
         </a>
-      </p>
+      </div>
     </footer>
   </div>
   <script src="./js/index.js"></script>
