Убрала лишний tabindex

--- a/sedona-hotels.html
+++ b/sedona-hotels.html
@@ -88,16 +88,16 @@
                 </div>
                 <div class="range__filter">
                   <button class="range__btn range__btn--left" type="button">
-                    <span tabindex="0" class="range__btn-content range__btn-content--left">левый ползунок</span>
+                    <span class="range__btn-content range__btn-content--left">левый ползунок</span>
                   </button>
                   <div class="range__fill-line"></div>
                   <button class="range__btn range__btn--right" type="button">
-                    <span tabindex="0" class="range__btn-content range__btn-content--right">правый ползунок</span>
+                    <span class="range__btn-content range__btn-content--right">правый ползунок</span>
                   </button>
                 </div>
               </section>
             </fieldset>
-            <button tabindex="0" class="filter-button button" type="submit">Показать</button>
+            <button class="filter-button button" type="submit">Показать</button>
           </div>
         </form>
       </section>
